--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babelPlugin",
+  "name": "babel-import-plugin",
   "version": "1.0.0",
   "description": "This is a project about babel plugin",
   "main": "index.js",
