--- a/package.json
+++ b/package.json
@@ -1,15 +1,35 @@
 {
   "name": "babel-import-plugin",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "This is a project about babel plugin",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development webpack --config v1.0.0/babel-import-plugin/webpack.config.js",
+    "build": "rm -rf dist && cross-env NODE_ENV=production webpack --config build/build.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config build/start.js"
+  },
+  "sideEffects": false,
   "keywords": [],
-  "author": "Jomsou",
+  "author": "Zenquan",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.2.0",
+    "cross-env": "^7.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^26.0.1",
+    "mocha": "^7.2.0",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.2.4",
+    "webpack-dev-server": "^3.1.14",
+    "webpack": "4.0.0",
+    "webpack-cli": "^3.2.1",
+    "uglifyjs-webpack-plugin": "^2.2.0"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "antd": "^3.7.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -20,8 +40,6 @@
     "esprima": "^4.0.1",
     "estraverse": "^4.2.0",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.1.0"
+    "react-dom": "^16.4.1"
   }
 }
