--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@jomsou/babel-import-plugin",
   "version": "1.0.0",
   "description": "This is a project about babel plugin",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
