--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Zenquan",
+  "author": "jomsoucan@gmail.com",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
