--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a project about babel plugin",
   "main": "./lib/index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack --config v1.0.0/babel-import-plugin/webpack.config.js",
+    "dev": "cross-env NODE_ENV=development webpack --config v1.0.0/babel-plugin-import/webpack.config.js",
     "build": "rm -rf dist && cross-env NODE_ENV=production webpack --config build/build.js",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config build/start.js"
   },
@@ -13,7 +13,9 @@
   "author": "jomsoucan@gmail.com",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "babel-core": "^6.26.3"
+  },
+  "dependencies": {
     "babel-types": "^6.26.0"
   }
 }
